--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Gallery Lightbox",
   "main": "dist/vue-image-lightbox.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --inline --hot --open --config build/webpack.dev.conf.js --mode development",
+    "build": "rimraf dist && webpack --progress --hide-modules --config build/webpack.prod.conf.js --mode production",
+    "lint": "eslint --ext .js,.vue app/"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,32 @@
   "bugs": {
     "url": "https://github.com/leduyptit/vue-gallery-lightbox/issues"
   },
-  "homepage": "https://github.com/leduyptit/vue-gallery-lightbox#readme"
+  "homepage": "https://github.com/leduyptit/vue-gallery-lightbox#readme",
+  "dependencies": {
+    "@babel/runtime": "^7.4.3",
+    "babel-loader": "^8.0.5",
+    "hammerjs": "^2.0.8",
+    "import-lazy": "^2.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "vue": "^2.5.22",
+    "vue-loader": "^15.3.0",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
